--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-tensorflow==2.8.0
-pandas==1.4.0
+tensorflow
+pandas
 numpy
 gensim
 sklearn
 datasets
 tensorboardX
-transformers==4.16.2
+transformers
